--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.6.2",
+    "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
